Fixed Contact Parcel bug

--- a/src/main/res/values-de/strings.xml
+++ b/src/main/res/values-de/strings.xml
@@ -17,22 +17,22 @@
 <resources>
 
     <string name="picture_will_be_previewed">
-        Nachdem Du einen Kontakt ausgewählt hast,
-        wird das generierte Bild angezeigt, bevor Du es der Person zuweisen kannst.
+        Nachdem du einen Kontakt ausgewählt hast,
+        wird das generierte Bild angezeigt, bevor du es der Person zuweisen kannst.
     </string>
-    <string name="no_contact_selected">Kein Kontakt ausgewählt</string>
     <string name="generated_image">Errechnetes Kontaktbild</string>
     <string name="save_image_file">Bild als Datei abspeichern</string>
     <string name="assign_to_contact">Bild zuweisen</string>
-    <string name="want_to_assign">Möchten Sie %s dieses Bild zuweisen?</string>
+    <string name="want_to_assign">Möchtest du %1$s dieses Bild zuweisen?</string>
     <string name="report">Bericht</string>
-    <string name="got_new_picture">%s hat ein neues Profilbild.</string>
-    <string name="saved_picture_as">Das Bild wurde als %s gespeichert.</string>
+    <string name="got_new_picture">%1$s hat ein neues Profilbild.</string>
+    <string name="saved_picture_as">Das Bild wurde als %1$s gespeichert.</string>
     <string name="error_generating">Ein Fehler trat beim Generieren des Bildes auf.</string>
     <string name="error_retrieving">Ein Fehler trat beim Abrufen der Kontaktdaten auf.</string>
     <string name="error_saving">
         Ein Fehler trat beim Speichern des Bildes auf.
-        Bitte stellen Sie sicher, dass Ihre Speicherkarte nicht gesperrt ist.</string>
+        Bitte stelle sicher, dass die Speicherkarte nicht gesperrt ist.
+    </string>
     <string name="error_assign">Ein Fehler trat beim Zuweisen des Bildes auf.</string>
 
     <string name="previous_image">Vorheriges Bild</string>
@@ -40,20 +40,19 @@
 
     <string name="all_contacts">Alle Kontakte</string>
     <string name="overwrite_all_or_only">
-        Möchtest Du für alle Personen ein neues Bild generieren oder nur für Kontakte,
+        Möchtest du für alle Personen ein neues Bild generieren oder nur für Kontakte,
         die noch keines haben?
     </string>
     <string name="confirm_all">
         Bitte bestätige, dass alle Bilder überschrieben werden sollen.
     </string>
-    <string name="auto_experimental_short">Dieser Modus ist experimentell.</string>
+    <string name="no_contact_selected">Keinen Kontakt ausgewählt</string>
+    <string name="please_note">Bitte Beachte</string>
     <string name="auto_experimental_long">
-        Bitte beachte:
-        \nVerschiedene Versionen von Android und einige Apps speichern Bilder auf eigene Art.
-        \n\nEs ist unwahrscheinlich, aber nicht unmöglich,
-        dass Bilder überschrieben werden.
+        Verschiedene Versionen von Android und einige Apps speichern Bilder auf eigene Art.
+        \n\nEs ist unwahrscheinlich, aber nicht unmöglich, dass Bilder überschrieben werden.
     </string>
-    <string name="auto_mode">Automatischer Modus (experimentell)</string>
+    <string name="auto_mode">Automatischer Modus</string>
     <string name="missing_pictures">Generiere fehlende</string>
     <string name="pick_contact">Einen Kontakt auswählen</string>
     <string name="skip">Weiter</string>
