--- a/src/main/res/values-fr/strings.xml
+++ b/src/main/res/values-fr/strings.xml
@@ -18,7 +18,6 @@
 
 <resources>
 
-    <string name="all_contacts">Tous les contacts</string>
     <string name="no_contact_selected">Personne n\'a été sélectionné</string>
     <string name="picture_will_be_previewed">
         Après le choix du contact,
@@ -27,36 +26,33 @@
     <string name="generated_image">Image calculée</string>
     <string name="save_image_file">Enregistrer l\'image</string>
     <string name="assign_to_contact">Attribuez à ce contact</string>
-    <string name="want_to_assign">Voulez-vous assigner cette image à %s?</string>
+    <string name="want_to_assign">Voulez-vous assigner cette image à %1$s?</string>
     <string name="report">Rapport d\'erreur</string>
     <string name="got_new_picture">%s a obtenu une nouvelle photo de profil.</string>
-    <string name="saved_picture_as">L\'image enregistré comme %s.</string>
+    <string name="saved_picture_as">L\'image enregistré comme %1$s.</string>
     <string name="error_generating">Erreur de générer la photo.</string>
     <string name="error_retrieving">Erreur de désigner les fichiers de contact.</string>
     <string name="error_saving">Erreur d\'enregistrer la photo</string>
     <string name="error_assign">Erreur d\'assigner la photo.</string>
 
-    <string name="previous_image">Image précédente</string>
-    <string name="next_image">Image suivante</string>
-
+    <string name="all_contacts">Tous les contacts</string>
     <string name="auto_experimental_long">
-        Notez:
-        \nDifférentes versions d\'Android et certaines applications
+        Différentes versions d\'Android et certaines applications
         peuvent stocker des photos dans des moyens uniques.
         \n\nIl est peu probable mais pas impossible que certaines images sont écrasées.
     </string>
-    <string name="auto_mode">Automatic mode (experimental)</string>
-    <string name="auto_experimental_short">Auto mode is experimental!</string>
-    <string name="overwrite_all_or_only">
-        Would you like to overwrite all images or only generate pictures for contacts
-        that currently do not have one?
-    </string>
+    <string name="auto_mode">Mode automatique</string>
     <string name="confirm_all">
-        Please confirm that you would like to overwrite all contact images.
+        S\'il vous plaît confirmer que vous souhaitez remplacer toutes les images de contact.
     </string>
-
-    <string name="missing_pictures">Missing pictures</string>
+    <string name="please_note">Notez</string>
+    <string name="previous_image">Image précédente</string>
+    <string name="next_image">Image suivante</string>
+    <string name="overwrite_all_or_only">
+        Voulez-vous remplacer toutes les images ou seulement générer des images pour contacts sans?
+    </string>
+    <string name="missing_pictures">Images manquantes</string>
     <string name="pick_contact">Choisir un contact</string>
-    <string name="skip">Skip</string>
+    <string name="skip">Sauter</string>
 
 </resources>
