--- a/src/main/res/values-sv/strings.xml
+++ b/src/main/res/values-sv/strings.xml
@@ -39,11 +39,11 @@
 
     <string name="all_contacts">All Contacts</string>
     <string name="auto_experimental_long">
-        Please note:\nDifferent flavours of Android and some apps may store pictures in unique ways.
+        Different flavours of Android and some apps may store pictures in unique ways.
         \n\nIt is unlikely, but not impossible, that profile images get overwritten.
     </string>
     <string name="auto_mode">Automatic mode (experimental)</string>
-    <string name="auto_experimental_short">Auto mode is experimental!</string>
+    <string name="please_note">Please Note</string>
     <string name="overwrite_all_or_only">
         Would you like to overwrite all images or only generate pictures for contacts
         that currently do not have one?
