--- a/src/main/res/values-nl/strings.xml
+++ b/src/main/res/values-nl/strings.xml
@@ -59,5 +59,6 @@
     <string name="missing_pictures">Ontbrekende foto\'s</string>
     <string name="pick_contact">Kies een contact</string>
     <string name="skip">Overslaan</string>
+    <string name="donate">Doneren</string>
 
 </resources>
