--- a/src/main/res/values-sv/strings.xml
+++ b/src/main/res/values-sv/strings.xml
@@ -55,5 +55,6 @@
     <string name="missing_pictures">Missing pictures</string>
     <string name="pick_contact">Välj en kontakt</string>
     <string name="skip">Skip</string>
+    <string name="donate">Donera</string>
 
 </resources>
