--- a/src/main/res/values-es/strings.xml
+++ b/src/main/res/values-es/strings.xml
@@ -23,9 +23,9 @@
     <string name="generated_image">Imagen generada</string>
     <string name="save_image_file">Guardar imagen en archivo</string>
     <string name="assign_to_contact">Aplicar imagen</string>
-    <string name="want_to_assign">¿Desea asignar a %s esta imagen?</string>
+    <string name="want_to_assign">¿Desea asignar a %1$s esta imagen?</string>
     <string name="report">Reportar</string>
-    <string name="got_new_picture">%s tiene ahora una nueva imagen de contacto.</string>
+    <string name="got_new_picture">%1$s tiene ahora una nueva imagen de contacto.</string>
     <string name="saved_picture_as">La imagen se guardó con el nombre %s</string>
 
     <string name="previous_image">Imagen anterior</string>
@@ -39,6 +39,7 @@
         que las imágenes de perfil consiguen sobrescribe.
     </string>
     <string name="auto_mode">Modo automático</string>
+    <string name="donate">Donar</string>
     <string name="error_assign">
         Ocurrió un error mientras se asignaba la imagen al contacto.
     </string>
@@ -47,14 +48,13 @@
     <string name="error_saving">Ocurrió un error guardando la imagen.</string>
     <string name="please_note">Tenga En Cuenta</string>
     <string name="overwrite_all_or_only">
-        Would you like to overwrite all images or only generate pictures for contacts
-        that currently do not have one?
+       ¿Quieres sobrescribir todas las imágenes o solamente para generar contactos sin una imagen?
     </string>
     <string name="confirm_all">
-        Please confirm that you would like to overwrite all contact images.
+        Por favor, confirme que desea sobrescribir todas las imágenes.
     </string>
 
-    <string name="missing_pictures">Missing pictures</string>
+    <string name="missing_pictures">Imágenes que falta</string>
     <string name="pick_contact">Seleccionar un contacto</string>
     <string name="skip">Skip</string>
 
