--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -37,8 +37,13 @@
 
     <string name="all_contacts">Tots els contactes</string>
     <string name="auto_experimental_long">
-        Different flavours of Android and some apps may store pictures in unique ways.
-        \n\nIt is unlikely, but not impossible, that profile images get overwritten.
+        Las diferentes versiones de Android y algunas aplicaciones
+        pueden almacenar imágenes en una forma única.
+        Es poco probable, pero no imposible,
+        que las imágenes de perfil consiguen sobrescribe.
+        \n\nMicopi ha sido probada exhaustivamente bajo varios dispositivos.
+        Sin embargo recomendamos hacer una copia de seguridad
+        de las fotos de sus contactos más importantes.
     </string>
     <string name="auto_mode">Mode automàtic</string>
     <string name="donate">Donar</string>
