--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,8 @@
     <string name="overwrite_all_or_only">
         Would you like to overwrite all images or only generate pictures for contacts
         that currently do not have one?
+        \n\nMicopi has been thoroughly tested
+        but we recommend making a backup of your most precious contacts and pictures, just in case.
     </string>
     <string name="please_note">Please Note</string>
     <string name="pick_contact">Pick a single contact</string>
